--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -135,6 +135,7 @@ footer {
     background-color: #4F553D;
     overflow: hidden;
     padding-bottom: 30px;
+    box-shadow: 0px -5px 100px 0px rgba(0, 0, 0, 0.5)
 }
 
 footer hr {
