--- a/ReactApps/app/src/index.css
+++ b/ReactApps/app/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.card-btns {
+  gap: 40px;
+}
+
+.card-btns > * {
+  font-size: 13px !important;
+  height: 50px;
+  padding: 2px;
+}
+
+.overlay {
+  margin-right: 40px;
+}
+
+
+
